# keyple-cpp-example

./: .gitignore  CMakeLists.txt
Example_Card_Calypso/: CMakeLists.txt
Example_Card_Calypso/src/main/UseCase2_ScheduledSelection/: CardReaderObserver.h  Main_ScheduledSelection_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase5_MultipleSession/: Main_MultipleSession_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase8_StoredValue_DebitInSession/: Main_StoredValue_DebitInSession_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase1_ReaderTypeAutoIdentification/: Main_ReaderTypeAutoIdentification_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase2_ExplicitReaderType/: Main_ExplicitReaderType_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase3_ChangeProtocolRules/: Main_ChangeProtocolRules_Pcsc.cpp
Example_Service/: CMakeLists.txt
Example_Service/src/main/UseCase1_BasicSelection/: Main_BasicSelection_Pcsc.cpp
Example_Service/src/main/UseCase2_ProtocolBasedSelection/: Main_ProtocolBasedSelection_Pcsc.cpp
Example_Service/src/main/UseCase3_AidBasedSelection/: Main_AidBasedSelection_Pcsc.cpp
Example_Service/src/main/UseCase4_ScheduledSelection/: CardReaderObserver.h  Main_ScheduledSelection_Pcsc.cpp
Example_Service/src/main/UseCase5_SequentialMultiSelection/: Main_SequentialMultiSelection_Pcsc.cpp
Example_Service/src/main/UseCase6_GroupedMultiSelection/: Main_GroupedMultiSelection_Pcsc.cpp
Example_Service/src/main/UseCase7_PluginAndReaderObservation/: Main_PluginAndReaderObservation_Pcsc.cpp  PluginObserver.cpp  PluginObserver.h  ReaderObserver.cpp  ReaderObserver.h
Example_Service/src/main/common/: ConfigurationUtil.cpp
Example_Service_Resource/: CMakeLists.txt
Example_Service_Resource/src/main/UseCase1_CardResourceService/: Main_CardResourceService_Stub.cpp
